Fix session country bug + use dockerrepo.govpart.de docker repo for converter